modify testing structure

--- a/runner.html
+++ b/runner.html
@@ -10,8 +10,7 @@
 
 			See console.
 			<script src="powerset.js"></script>
-			<script src="tests.js"></script>
-			<script src="handlebars-v1.3.0.js"></script>
+			<script src="personalTester.js"></script>
 			
 		</body>
 	</html>
