add array compare test

--- a/runner.html
+++ b/runner.html
@@ -9,8 +9,8 @@
 			
 
 			See console.
-			<script src="powerset.js"></script>
-			<script src="personalTester.js"></script>
+			<script src="lib/powerset.js"></script>
+			<script src="tests/tests.js"></script>
 			
 		</body>
 	</html>
