--- a/runner.html
+++ b/runner.html
@@ -3,11 +3,9 @@
 		<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<title>Challenges</title>
+			<title>Power Set</title>
 		</head>
 		<body>
-			
-
 			See console.
 			<script src="lib/powerset.js"></script>
 			<script src="tests/tests.js"></script>
